--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cffi==1.14.5
 channels==3.0.3
 channels-redis==3.2.0
 chardet==4.0.0
+click==7.1.2
 constantly==15.1.0
 cryptography==3.4.7
 daphne==3.0.2
@@ -18,6 +19,8 @@ django-cleanup==5.2.0
 django-crispy-forms==1.11.2
 django-environ==0.4.5
 django-smsru==1.0.0
+gunicorn==20.1.0
+h11==0.12.0
 hiredis==2.0.0
 hyperlink==21.0.0
 idna==2.10
@@ -40,5 +43,6 @@ sqlparse==0.4.1
 Twisted==21.2.0
 txaio==21.2.1
 urllib3==1.26.4
+uvicorn==0.13.4
 xlwt==1.3.0
 zope.interface==5.4.0
